--- a/AcampJovens.Application/AcampJovens.Application.csproj
+++ b/AcampJovens.Application/AcampJovens.Application.csproj
@@ -7,7 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\AcampJovens.Common\AcampJovens.Common.csproj" />
       <ProjectReference Include="..\AcampJovens.CrossCutting\AcampJovens.CrossCutting.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="12.4.1" />
     </ItemGroup>
 
 </Project>
